--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "pantaloons",
   "license": "MIT",
   "dependencies": {
-    "@openzeppelin/contracts": "^4.6.0"
+    "@openzeppelin/contracts": "^4.6.0",
+    "abdk-libraries-solidity": "^3.0.0"
   }
 }
