--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   "license": "MIT",
   "dependencies": {
     "@openzeppelin/contracts": "^4.6.0",
-    "abdk-libraries-solidity": "^3.0.0"
+    "@truffle/hdwallet-provider": "^2.0.9",
+    "abdk-libraries-solidity": "^3.0.0",
+    "dotenv": "^16.0.1"
+  },
+  "devDependencies": {
+    "truffle-plugin-verify": "^0.5.26"
   }
 }
