--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@openzeppelin/contracts": "^4.6.0",
     "@truffle/hdwallet-provider": "^2.0.9",
     "abdk-libraries-solidity": "^3.0.0",
-    "dotenv": "^16.0.1"
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
+    "ethers": "^5.6.9"
   },
   "devDependencies": {
     "truffle-plugin-verify": "^0.5.26"
